# rwanda

./: LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py  tox.ini  verify.py
rwanda/: __init__.py  main.py
rwanda/provinces/kigali/: __init__.py
rwanda/provinces/kigali/districts/: __init__.py
rwanda/provinces/kigali/districts/gasabo/: __init__.py
rwanda/provinces/kigali/districts/gasabo/sectors/: __init__.py  bumbogo.py  gatsata.py  gikomero.py  gisozi.py  jabana.py  jali.py  kacyiru.py  kimironko.py  kinyinya.py  remera.py
rwanda/provinces/kigali/districts/kicukiro/: __init__.py
rwanda/provinces/kigali/districts/kicukiro/sectors/: __init__.py  kagarama.py  kanombe.py  kicukiro.py  kigarama.py  masaka.py  niboye.py  nyarugunga.py
rwanda/provinces/kigali/districts/nyarugenge/: __init__.py
rwanda/provinces/kigali/districts/nyarugenge/sectors/: __init__.py  kanyinya.py  kigali.py  mageragere.py  muhima.py  nyarugenge.py  rwezamenyo.py
rwanda/tests/: test_get_provinces.py
src/: __init__.py  main.py
src/provinces/: __init__.py
src/provinces/kigali/: __init__.py
src/provinces/kigali/districts/gasabo/: __init__.py
src/provinces/kigali/districts/gasabo/sectors/: kimihurura.py  ndera.py  nduba.py  rusororo.py  rutunga.py
src/provinces/kigali/districts/kicukiro/: __init__.py
src/provinces/kigali/districts/kicukiro/sectors/: gahanga.py  gatenga.py  gikondo.py
src/provinces/kigali/districts/nyarugenge/: __init__.py
src/provinces/kigali/districts/nyarugenge/sectors/: gitega.py  kimisagara.py  (+3 more)
tests/: __init__.py  test_get_provinces.py
