[metadata]
name = rwanda
version = 0.0.1
author = Harerakalex
author_email = hareraloston@gmail.com
description = This python package that returns provinces, districts, sectors, villages and cells found in Rwanda.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/harerakalex/rwanda
project_urls =
    Bug Tracker = https://github.com/harerakalex/rwanda/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src